Bug #799 FLUSH TABLES WITH READ LOCK does not block CREATE TABLE
Submitted: 7 Jul 2003 2:34 Modified: 1 Sep 2003 1:02
Reporter: Peter Zaitsev (Basic Quality Contributor) Email Updates:
Status: Closed Impact on me:
None 
Category:MySQL Server Severity:S3 (Non-critical)
Version:4.0 (all) OS:Any (all)
Assigned to: Sergei Glukhov CPU Architecture:Any

[7 Jul 2003 2:34] Peter Zaitsev
Description:
FLUSH TABLES WITH READ LOCK

does not block concurrent CREATE TABLE which may lead to wrong binary log offset position to be reported, making snapshot unusable for replication.

The same applies to COMMIT STATEMENT

How to repeat:
connection1:

FLUSH TABLES WITH READ LOCK;

conection2:

create table t(i int);

Suggested fix:
We shall surely BLOCK create table, as well as possibly all statements which
do write to BINLOG - this is COMMIT first of all.
[27 Aug 2003 1:40] Michael Widenius
This will be fixed in 4.1. For now this is documented as a critical bug in the manual.
[28 Aug 2003 9:11] Sergei Glukhov
ChangeSet
  1.1584 03/08/28 18:09:00