Fix for bug #799 FLUSH TABLES WITH READ LOCK does not block CREATE TABLE